# uncluttered-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/uncluttered/: __init__.py
src/uncluttered/cli/: __init__.py  display.py  main.py
src/uncluttered/core/: __init__.py  agent.py  database.py  engine.py  models.py  search.py  utils.py
src/uncluttered/core/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
tests/: test_core.py  test_models.py  test_phase2.py  test_utils.py
